<resources>
    <string name="app_name">贴吧 Lite</string>
    <string name="title_miui_fav">%1$s_贴吧 Lite</string>
    <string name="title_notifications">消息</string>
    <string name="title_collect">收藏</string>
    <string name="title_explore">动态</string>
    <string name="title_user">我</string>
    <string name="title_search">搜索</string>
    <string name="hint_search">发现更多</string>
    <string name="hint_search_in_ba">在 %1$s 吧内搜索</string>
    <string name="my_info_history">浏览历史</string>
    <string name="sidebar_exit">退出</string>
    <string name="shortcut_oksign">一键签到</string>
    <string name="shortcut_my_collect">我的收藏</string>
    <string name="shortcut_my_message">我的消息</string>
    <string name="shortcut_search">搜索</string>
    <string name="forum_list_title">关注</string>
    <string name="title_login">登录</string>
    <string name="title_refresh">刷新</string>
    <string name="title_copy_link">复制链接</string>
    <string name="toast_copy_success">已复制到剪贴板</string>
    <string name="title_share">分享</string>
    <string name="title_history">历史记录</string>
    <string name="title_history_delete">清空历史记录</string>
    <string name="toast_delete_success">清除成功啦( •̀ ω •́ )✧</string>
    <string name="toast_double_key_exit">再按一次退出程序</string>
    <string name="title_about">关于</string>
    <string name="my_info_settings">设置</string>
    <string name="title_settings">设置</string>
    <string name="title_settings_custom">个性化</string>
    <string name="tip_signed">已签</string>
    <string name="title_oksign">一键签到</string>
    <string name="title_open_in_browser">在浏览器内打开</string>
    <string name="title_pure_read">沉浸阅读</string>
    <string name="content_avatar">头像</string>
    <string name="tip_login">请先登录</string>
    <string name="text_loading">正在加载…</string>
    <string name="title_sort">倒序浏览</string>
    <string name="title_see_lz">只看楼主</string>
    <string name="toast_param_error">参数错误</string>
    <string name="title_see_lz_on">查看全部</string>
    <string name="title_sort_on">正序浏览</string>
    <string name="title_collect_on">取消收藏</string>
    <string name="toast_collect_remove_success">已移除收藏</string>
    <string name="toast_collect_add_success">已添加收藏</string>
    <string name="toast_collect_remove_error">移除收藏失败 %s</string>
    <string name="toast_collect_add_error">添加收藏失败</string>
    <string name="tip_thread_reply">写回复</string>
    <string name="title_reply">回复</string>
    <string name="tip_reply">说点什么</string>
    <string name="title_send">发送</string>
    <string name="tip_load_end">最后的斯大林格勒防线</string>
    <string name="title_floor">查看回复</string>
    <string name="tip_floor_more"><![CDATA[查看更多回复 >]]></string>
    <string name="tip_floor_btn">查看回复</string>
    <string name="title_account">账号管理</string>
    <string name="title_block_settings">屏蔽管理</string>
    <string name="tip_verify_code">请输入图中的验证码</string>
    <string name="title_verify_code">请输入验证码</string>
    <string name="title_submit">提交</string>
    <string name="toast_reply_success">回贴成功</string>
    <string name="toast_verify_code_empty">不能为空</string>
    <string name="title_black_list">黑名单管理</string>
    <string name="title_input">请输入</string>
    <string name="tip_input">请输入</string>
    <string name="title_white_list">白名单管理</string>
    <string name="title_add_black">添加黑名单</string>
    <string name="title_add_white">添加白名单</string>
    <string name="tip_multi_block">使用空格分割多个词语</string>
    <string name="toast_collect_update_success">更新收藏成功</string>
    <string name="toast_collect_update_error">更新收藏失败 %1$s</string>
    <string name="title_main">首页</string>
    <string name="title_jump_page">跳页</string>
    <string name="tip_jump_page">当前 %1$d/%2$d 页</string>
    <string name="toast_jump_page_too_big">您输入的页码不对哦</string>
    <string name="title_default">贴吧 Lite</string>
    <string name="my_info_collect">我的收藏</string>
    <string name="title_my_collect">我的收藏</string>
    <string name="title_settings_about">杂项</string>
    <string name="tip_load_failed">加载失败，点击重试</string>
    <string name="title_at_me">提到我的</string>
    <string name="tip_avatar">头像</string>
    <string name="text_message_list_item_source">来自 %1$s吧</string>
    <string name="text_message_list_item_reply_my_thread">回复我的主题：%1$s</string>
    <string name="title_reply_me">回复我的</string>
    <string name="title_to_thread">查看主题</string>
    <string name="tip_position">%1$s / %2$s</string>
    <string name="title_floor_loaded">%1$s 楼的回复</string>
    <string name="title_send_to_desktop">发送到桌面</string>
    <string name="toast_send_to_desktop_success">已尝试发送快捷方式</string>
    <string name="toast_send_to_desktop_failed">快捷方式创建失败：%1$s</string>
    <string name="toast_reply_failed">回贴失败(%1$d) %2$s</string>
    <string name="title_exit_account">退出登录</string>
    <string name="title_copy_bduss">复制 BDUSS</string>
    <string name="title_my_tail">我的小尾巴</string>
    <string name="title_new_account">添加账号</string>
    <string name="title_switch_account">切换账号</string>
    <string name="toast_exit_account_success">退出登录成功，请重新登录</string>
    <string name="search_order_new">新贴在前</string>
    <string name="search_order_only_thread">仅主题贴</string>
    <string name="button_cancel">取消</string>
    <string name="title_save_image">保存图片</string>
    <string name="title_pure_read_on">关闭沉浸阅读</string>
    <string name="title_delete">删除</string>
    <string name="tip_collect">您上次收藏到第 %1$s 楼</string>
    <string name="tip_lz">楼主</string>
    <string name="title_check_beta_update">接收 Beta 版更新</string>
    <string name="title_auto_sign_time">自动签到时间</string>
    <string name="tip_check_beta_update">Beta 版本可能不稳定</string>
    <string name="tip_about">当前版本 %1$s</string>
    <string name="title_update_stoken">正在更新登录信息</string>
    <string name="tip_account_error">提示：若您的账号登录失效，可点击“添加账号”，然后登录相同的账号即可更新登录信息。</string>
    <string name="tips_message_reply">你有 %1$s 条新回复</string>
    <string name="tips_message_at">有 %1$s 人提到了你</string>
    <string name="my_info_theme">主题选择</string>
    <string name="my_info_night">夜间</string>
    <string name="title_theme">主题选择</string>
    <string name="title_theme_settings">主题设置</string>
    <string name="title_unfollow">取消关注</string>
    <string name="tip_no_intro">这个人很懒，什么都没有写</string>
    <string name="url_user_home"><![CDATA[https://tieba.baidu.com/home/main?un=%1$s&tab=%2$d]]></string>
    <string name="title_block">屏蔽此用户</string>
    <string name="toast_add_success">添加成功</string>
    <string name="toast_unlike_success">取消关注成功</string>
    <string name="toast_unlike_failed">取消关注失败 %1$s</string>
    <string name="tip_store_deleted">贴子已被删除</string>
    <string name="content_top">置顶</string>
    <string name="tip_forum_header_liked">LV%1$s %2$s</string>
    <string name="text_forum_name">%1$s吧</string>
    <string name="toast_sign_success">签到成功， 经验 +%1$s。你是今天第 %2$s 个签到的。</string>
    <string name="button_sign_in">签到</string>
    <string name="button_signed">已签到</string>
    <string name="button_like">关注</string>
    <string name="toast_like_success">关注成功，你是第 %s 个关注本吧的</string>
    <string name="tab_forum_1">查看贴子</string>
    <string name="tab_forum_good">吧内精华</string>
    <string name="tip_good">精</string>
    <string name="title_my_message">我的消息</string>
    <string name="title_messages">消息</string>
    <string name="button_no">否</string>
    <string name="button_yes">是</string>
    <string name="title_agreed">已点赞</string>
    <string name="title_agree">点赞</string>
    <string name="toast_agree_failed">点赞失败 %1$s</string>
    <string name="toast_unagree_failed">取消点赞失败 %1$s</string>
    <string name="title_copy_forum_name">复制吧名</string>
    <string name="toast_error">加载失败(%1$d) %2$s</string>
    <string name="title_clear_picture_cache">清除图片缓存</string>
    <string name="toast_clear_picture_cache_success">成功清除图片缓存</string>
    <string name="tip_cache">当前共有缓存 %1$s</string>
    <string name="toast_switch_success">切换成功</string>
    <string name="tip_no_little_tail">你还没有设置小尾巴</string>
    <string name="title_dialog_exit_account">确认退出登录吗？</string>
    <string name="tip_new_version">发现新版本 %1$s</string>
    <string name="title_dialog_update_stoken">您的登录信息需要更新</string>
    <string name="message_dialog_update_stoken">这不会花费您太多时间，请点击“确定”开始更新</string>
    <string name="title_dialog_logged_in_expired">您的登录信息似乎已过期</string>
    <string name="message_dialog_logged_in_expired">请您重新登录</string>
    <string name="button_next_time">下次再说</string>
    <string name="button_go_to_download">去下载</string>
    <string name="title_dialog_update">发现新版本 %1$s</string>
    <string name="tip_beta_version">Beta 版本可能不稳定，请谨慎更新\n</string>
    <string name="title_dialog_permission">我们需要获取您的部分权限</string>
    <string name="toast_no_permission_insert_photo">未授予「存储空间」权限，无法插入图片</string>
    <string name="message_need_permission">这些权限将仅用于必要的工作。\n</string>
    <string name="message_permission_desc">「%1$s」权限：%2$s\n</string>
    <string name="tip_permission_storage">用于保存、上传图片，更换头像。</string>
    <string name="tip_regrant_permission">请点击「%1$s」重新授权。</string>
    <string name="tip_no_permission">权限未授予，部分功能可能无法使用</string>
    <string name="tip_permission_phone">获取您的 IMEI 以用于请求百度 API。</string>
    <string name="toast_no_permission_save_photo">未授予「存储空间」权限，无法保存图片</string>
    <string name="toast_no_permission_upload_portrait">未授予「存储空间」权限，无法上传头像</string>
    <string name="menu_save_photo">保存图片</string>
    <string name="toast_play_failed">播放失败</string>
    <string name="toast_cannot_view">抱歉，当前暂时无法浏览本吧</string>
    <string name="tip_thread_item">第 %1$s 楼 %2$s</string>
    <string name="text_ip_location">来自%1$s</string>
    <string name="tip_floor_more_count">查看更多回复(%1$s)</string>
    <string name="update_tip_title">发现新版本 %1$s(%2$s)</string>
    <string name="update_tip_header">更新 · %1$s</string>
    <string name="tip_release_version">正式版</string>
    <string name="tip_version_beta">Beta 版</string>
    <string name="my_info_service_center">服务中心</string>
    <string name="title_delete_post">删除</string>
    <string name="toast_success">成功</string>
    <string name="title_report">举报</string>
    <string name="title_level_old_style">使用旧样式的等级图标</string>
    <string name="url_post_report"><![CDATA[https://tieba.baidu.com/mo/q/postreport?fid=%1$s&tid=%2$s&pid=%3$s]]></string>
    <string name="title_dialog_del_post">确定要删除吗？</string>
    <string name="toast_delete_error">删除失败 %1$s</string>
    <string name="toast_delete_thread_success">删除成功</string>
    <string name="tip_empty">这里什么都没有</string>
    <string name="tip_user_hide">该用户已隐藏个人动态</string>
    <string name="tip_stat">%1$s 关注\u3000%2$s 粉丝</string>
    <string name="tip_from_forum">%1$s吧</string>
    <string name="title_dialog_download">选择下载方式</string>
    <string name="tip_from_history">您上次阅读到第 %1$s 楼</string>
    <string name="update_tip_no_title">当前已是最新版本</string>
    <string name="update_tip_no_header">更新</string>
    <string name="button_check_update">检查更新</string>
    <string name="tip_oksign_running">一键签到服务正在运行中</string>
    <string name="title_auto_sign">自动签到</string>
    <string name="summary_auto_sign">开启后，将每天定时运行一键签到</string>
    <string name="summary_auto_sign_on">自动签到已开启</string>
    <string name="summary_auto_sign_time">当前设置为 %1$s</string>
    <string name="tip_auto_sign">提示：请允许贴吧 Lite 的自启动，否则可能无法正常唤醒签到。\n若使用的是 MIUI 等国产定制 UI，你还需要在系统设置中进行相应修改。</string>
    <string name="update_tip_no_content">点击查看完整更新日志</string>
    <string name="title_forum">%1$s吧</string>
    <string name="menu_edit_info">编辑资料</string>
    <string name="url_edit_info">https://tieba.baidu.com/mo/q/myinfo?</string>
    <string name="button_allow">允许</string>
    <string name="button_denied">禁止</string>
    <string name="title_not_ask">不再询问</string>
    <string name="title_ask_permission">要允许 %1$s 访问您的%2$s吗？</string>
    <string name="title_ask_permission_clipboard_copy">要允许 %1$s 写入您的剪贴板吗？</string>
    <string name="menu_copy">复制</string>
    <string name="title_copy_json">复制 json</string>
    <string name="title_view_floor">查看当前楼层</string>
</resources>